// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaderboardItemCircle should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardCircle
    isLoading={false}
    status="active"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Circle
          cx="55"
          cy="55"
          fill="rgb(232, 49, 129)"
          r="55"
        />,
        <G>
          <Polyline
            fill="none"
            points="38.4,51.8 51.6,65 71.6,45"
            stroke="white"
            strokeMiterlimit="10"
            strokeWidth="5"
          />
        </G>,
      ],
      "height": "55",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 110 110",
      "width": "55",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "55",
          "cy": "55",
          "fill": "rgb(232, 49, 129)",
          "r": "55",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Polyline
            fill="none"
            points="38.4,51.8 51.6,65 71.6,45"
            stroke="white"
            strokeMiterlimit="10"
            strokeWidth="5"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "none",
            "points": "38.4,51.8 51.6,65 71.6,45",
            "stroke": "white",
            "strokeMiterlimit": "10",
            "strokeWidth": "5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Circle
            cx="55"
            cy="55"
            fill="rgb(232, 49, 129)"
            r="55"
          />,
          <G>
            <Polyline
              fill="none"
              points="38.4,51.8 51.6,65 71.6,45"
              stroke="white"
              strokeMiterlimit="10"
              strokeWidth="5"
            />
          </G>,
        ],
        "height": "55",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 110 110",
        "width": "55",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "55",
            "cy": "55",
            "fill": "rgb(232, 49, 129)",
            "r": "55",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Polyline
              fill="none"
              points="38.4,51.8 51.6,65 71.6,45"
              stroke="white"
              strokeMiterlimit="10"
              strokeWidth="5"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "fill": "none",
              "points": "38.4,51.8 51.6,65 71.6,45",
              "stroke": "white",
              "strokeMiterlimit": "10",
              "strokeWidth": "5",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LeaderboardItemCircle should render with a + icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardCircle
    isLoading={true}
    status="create"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Circle
          cx="55"
          cy="55"
          fill="rgb(170,170,170)"
          r="55"
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 55,
              "justifyContent": "center",
              "width": 55,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="small"
          />
        </View>,
      ],
      "height": "55",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 110 110",
      "width": "55",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "55",
          "cy": "55",
          "fill": "rgb(170,170,170)",
          "r": "55",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="small"
          />,
          "style": Object {
            "alignItems": "center",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "white",
            "hidesWhenStopped": true,
            "size": "small",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Circle
            cx="55"
            cy="55"
            fill="rgb(170,170,170)"
            r="55"
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 55,
                "justifyContent": "center",
                "width": 55,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />
          </View>,
        ],
        "height": "55",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 110 110",
        "width": "55",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "55",
            "cy": "55",
            "fill": "rgb(170,170,170)",
            "r": "55",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />,
            "style": Object {
              "alignItems": "center",
              "height": 55,
              "justifyContent": "center",
              "width": 55,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animating": true,
              "color": "white",
              "hidesWhenStopped": true,
              "size": "small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LeaderboardItemCircle should render with a loading indicator 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardCircle
    isLoading={true}
    status="active"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Circle
          cx="55"
          cy="55"
          fill="rgb(232, 49, 129)"
          r="55"
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 55,
              "justifyContent": "center",
              "width": 55,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="small"
          />
        </View>,
      ],
      "height": "55",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 110 110",
      "width": "55",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "55",
          "cy": "55",
          "fill": "rgb(232, 49, 129)",
          "r": "55",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="small"
          />,
          "style": Object {
            "alignItems": "center",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "white",
            "hidesWhenStopped": true,
            "size": "small",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Circle
            cx="55"
            cy="55"
            fill="rgb(232, 49, 129)"
            r="55"
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 55,
                "justifyContent": "center",
                "width": 55,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />
          </View>,
        ],
        "height": "55",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 110 110",
        "width": "55",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "55",
            "cy": "55",
            "fill": "rgb(232, 49, 129)",
            "r": "55",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />,
            "style": Object {
              "alignItems": "center",
              "height": 55,
              "justifyContent": "center",
              "width": 55,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animating": true,
              "color": "white",
              "hidesWhenStopped": true,
              "size": "small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LeaderboardItemCircle should render with a x icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardCircle
    isLoading={true}
    status="inactive"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Circle
          cx="55"
          cy="55"
          fill="rgb(96,96,96)"
          r="55"
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 55,
              "justifyContent": "center",
              "width": 55,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="small"
          />
        </View>,
      ],
      "height": "55",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 110 110",
      "width": "55",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "55",
          "cy": "55",
          "fill": "rgb(96,96,96)",
          "r": "55",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="small"
          />,
          "style": Object {
            "alignItems": "center",
            "height": 55,
            "justifyContent": "center",
            "width": 55,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "white",
            "hidesWhenStopped": true,
            "size": "small",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Circle
            cx="55"
            cy="55"
            fill="rgb(96,96,96)"
            r="55"
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 55,
                "justifyContent": "center",
                "width": 55,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />
          </View>,
        ],
        "height": "55",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 110 110",
        "width": "55",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "55",
            "cy": "55",
            "fill": "rgb(96,96,96)",
            "r": "55",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />,
            "style": Object {
              "alignItems": "center",
              "height": 55,
              "justifyContent": "center",
              "width": 55,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animating": true,
              "color": "white",
              "hidesWhenStopped": true,
              "size": "small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
